# KLTN_ChatBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/: auth.py  main.py
configs/: db.py  llm.py
data/: crawl_data.ipynb  data.csv  data_clean.csv  database.py  ingest_data.py  normalize_remote.py  processing_data.ipynb
evaluation/: base_eval.py  dataset_e2e.py  evaluation_metrics.json  evaluators_strict.py  export_eval_metrics.py  plot_eval_metrics.py  run_deepseek_eval.py  run_gpt_eval.py  run_mistral_eval.py  run_o4_eval.py
evaluation/end_to_end/: dataset_e2e.py  dataset_e2e_v2.py  run_e2e_eval.py
evaluation/quality/: evaluators_strict.py  run_quality_eval.py
frontend/: vercel.json
frontend/css/: style.css
frontend/html/: admin.html  index.html  login.html  register.html
frontend/js/: admin.js  config.js  login.js  main.js  register.js
nginx/: nginx.conf
rag/: descriptions.json  descriptions_clean_1.json  embedding.py  index.py  prepare.py
schema/: chart_labels.yaml
src/agents/: Analyst_agent.py  Finance_agent.py  Recommendation_Agent.py  Supervisor_agent.py  graph.ipynb
src/llm/: base.py  llm_client.py
src/memory/: long_memory.py  short_memory.py
src/prompts/: Analyst_prompt.py  Finance_prompt.py  Recommendation_prompt.py  Supervisor_prompt.py
src/tools/: calculate_finance.py  calculate_hybrid_rate.py  calculator.py  compare_loan_scenarios.py  execute_sql.py  get_schema.py  get_unique_value.py  retrieve_context.py
src/utils/: chart_labels_loader.py
tests/: TestCases.xlsx  conftest.py
(+8 files in other folders)
