[project]
name = "kltn-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "setuptools>=82.0.1",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.46.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "fastmcp>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
]

[tool.uv.sources]
undetected-chromedriver = { git = "https://github.com/ultrafunkamsterdam/undetected-chromedriver.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
# Notebook là file thăm dò dữ liệu, không lint.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# E402: nhiều module cố ý sys.path.append + load_dotenv() trước khi import.
ignore = ["E402"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
